sonarqube issue resolved